/*
 * This Java source file was generated by the Gradle 'init' task.
 */
package u0.movieratings.scottgriffin;
import java.util.*;

public class App {
    public String getGreeting() {
        Map<String, Integer> averageRatings; 
        Map<String, String> highestRater;
        Map<String, Integer> topTenRaters;


        return "Welcome to Scott's Movie Ratings App";


    }

    public static void main(String[] args) {
        System.out.println(new App().getGreeting());
    }
}
