package u0.movieratings.scottgriffin;
import java.util.*;

public class RatingReader {
    private String filename;

    public List<Rating> getAllRatings(){
        return null;
    }
}
